@@ -70,7 +70,7 @@ class MediaAccess
                 header("Content-Disposition: {$this->disposition}; filename={$dq}" . urlencode($fileName) . $dq);
                 header('X-XSS-Protection: 1; mode=block');
                 header('X-Frame-Options: SAMEORIGIN');
-                echo $content;
+                $this->outputImage($content);
             } else if (stripos($target, 'http://') === 0 || stripos($target, 'https://') === 0) { // http or https
                 if (intval(get_cfg_var('allow_url_fopen')) === 1) {
                     $content = file_get_contents($target);
@@ -96,7 +96,7 @@ class MediaAccess
                     . str_replace("+", "%20", urlencode($fileName)) . $dq);
                 header('X-XSS-Protection: 1; mode=block');
                 header('X-Frame-Options: SAMEORIGIN');
-                echo $content;
+                $this->outputImage($content);
             } else { // class
                 $noscheme = substr($target, 8);
                 $className = substr($noscheme, 0, strpos($noscheme, "/"));
@@ -335,6 +335,65 @@ class MediaAccess
                 break;
         }
         return $type;
+    }
+
+    private function outputImage($content)
+    {
+        $rotate = false;
+        if (function_exists('exif_imagetype') && function_exists('imagejpeg')) {
+            $tmpDir = ini_get('upload_tmp_dir');
+            if ($tmpDir === '') {
+                $tmpDir = sys_get_temp_dir();
+            }
+            $temp = 'IM_TEMP_' . base64_encode(randomString(12)) . '.jpg';
+            if (mb_substr($tmpDir, 1) === DIRECTORY_SEPARATOR) {
+                $tempPath = $tmpDir . $temp;
+            } else {
+                $tempPath = $tmpDir . DIRECTORY_SEPARATOR . $temp;
+            }
+
+            $fp = fopen($tempPath, 'w');
+            fwrite($fp, $content);
+            fclose($fp);
+
+            $imageType = image_type_to_mime_type(exif_imagetype($tempPath));
+            if ($imageType === 'image/jpeg') {
+                $image = imagecreatefromstring($content);
+                if ($image !== false) {
+                    $exif = exif_read_data($tempPath);
+                    if($exif !== false && !empty($exif['Orientation'])) {
+                        switch($exif['Orientation']) {
+                            case 3:
+                                $content = imagerotate($image, 180, 0);
+                                $rotate = true;
+                                break;
+                            case 6:
+                                $content = imagerotate($image, -90, 0);
+                                $rotate = true;
+                                break;
+                            case 8:
+                                $content = imagerotate($image, 90, 0);
+                                $rotate = true;
+                                break;
+                        }
+                    }
+                }
+                if ($rotate === true) {
+                    header('Content-Type: image/jpeg');
+                    ob_start();
+                    imagejpeg($content);
+                    $size = ob_get_length();
+                    header('Content-Length: ' . $size);
+                    ob_end_flush();
+                }
+                imagedestroy($image);
+            }
+            unlink($tempPath);
+        }
+
+        if ($rotate === false) {
+            echo $content;
+        }
     }
 
 }
